--- a/Inkscape/Inkscapes nybörjarguide/flowing-text-into-frame.po
+++ b/Inkscape/Inkscapes nybörjarguide/flowing-text-into-frame.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-13 20:31+0200\n"
+"PO-Revision-Date: 2025-07-29 13:58+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -28,12 +28,12 @@ msgstr "Flödande text i en ram"
 #: ../../source/flowing-text-into-frame.rst:5 2316170b6e0e4c86a62560c5cdf3b3c0
 msgid ""
 "Whether you're creating a graphical poem (calligram), or whether your text "
-"needs a specific shape to fit into your layout, Inkscape offers you a tool "
-"to assist with this type of design."
+"needs a specific shape to fit into your layout, Inkscape offers you a tool to "
+"assist with this type of design."
 msgstr ""
-"Oavsett om du skapar en grafisk dikt (kalligram) eller om din text behöver "
-"en specifik form för att passa in i din layout, erbjuder Inkscape ett "
-"verktyg som hjälper dig med den här typen av design."
+"Oavsett om du skapar en grafisk dikt (kalligram) eller om din text behöver en "
+"specifik form för att passa in i din layout, erbjuder Inkscape ett verktyg "
+"som hjälper dig med den här typen av design."
 
 #: ../../source/flowing-text-into-frame.rst:9 15569015b7984fb5a8a396c634c053b9
 msgid "|image0|"
@@ -45,7 +45,7 @@ msgstr "image0"
 
 #: ../../source/flowing-text-into-frame.rst:11 97904eb6b74c4c1ca9743bfe56e17c2d
 msgid "To use it:"
-msgstr "För att använda den:"
+msgstr "För att använda det:"
 
 #: ../../source/flowing-text-into-frame.rst:13 d7e7795bb8a5413ca4a85813c1bc3681
 msgid "Write the text on the canvas (or copy-paste it)."
@@ -53,15 +53,15 @@ msgstr "Skriv texten på duken (eller kopiera och klistra in den)."
 
 #: ../../source/flowing-text-into-frame.rst:14 49fa39a6f8594da7ae40b6f02f6790a3
 msgid "Create the path or shape that the text is supposed to fill."
-msgstr "Skapa den slinga eller form som texten ska fylla."
+msgstr "Skapa den slinga eller form som texten är tänkt att fylla."
 
 #: ../../source/flowing-text-into-frame.rst:15 5467ac6c9d3b43babba79886bb25f6b9
 msgid ""
 "With the Selector tool, select the shape and the text, then "
 "use :menuselection:`Text --> Flow into Frame`."
 msgstr ""
-"Markera formen och texten med Selector-verktyget och använd "
-"sedan :menuselection:`Text --> Flow into Frame`."
+"Markera formen och texten med Väljare-verktyget och använd "
+"sedan :menuselection:`Text --> Flöda in i ram`."
 
 #: ../../source/flowing-text-into-frame.rst:18 80351b2071704aa689ae5003e08c90c6
 msgid ""
@@ -87,22 +87,22 @@ msgid ""
 "To further tweak the text, there is one last, **irreversible** option: the "
 "transformation of a text into a path. When you convert a text into a path, "
 "you will lose any possibility of editing the text's contents. The text will "
-"no longer be available as a text object, but it now allows you to use all "
-"the available options for editing paths. For example, it will become "
-"impossible to change the font, the font weight (light, bold, heavy,...) or "
-"the style (italic, regular, condensed,...). Because of this, it is "
-"recommended to work on the rough and general shape of a text first, and to "
-"later move on to the finer details:"
+"no longer be available as a text object, but it now allows you to use all the "
+"available options for editing paths. For example, it will become impossible "
+"to change the font, the font weight (light, bold, heavy,...) or the style "
+"(italic, regular, condensed,...). Because of this, it is recommended to work "
+"on the rough and general shape of a text first, and to later move on to the "
+"finer details:"
 msgstr ""
 "För att ytterligare justera texten finns det ett sista, **irreversibelt** "
 "alternativ: att omvandla en text till en slinga. När du konverterar en text "
 "till en slinga förlorar du alla möjligheter att redigera textens innehåll. "
-"Texten kommer inte längre att vara tillgänglig som ett textobjekt, men du "
-"kan nu använda alla tillgängliga alternativ för att redigera slingor. Det "
-"blir t.ex. omöjligt att ändra typsnitt, teckengrad (lätt, fet, tung, ...) "
-"eller stil (kursiv, normal, kondenserad, ...). På grund av detta "
-"rekommenderas det att man först arbetar med den grova och allmänna formen på "
-"en text och sedan går vidare till de finare detaljerna:"
+"Texten kommer inte längre att vara tillgänglig som ett textobjekt, men du kan "
+"nu använda alla tillgängliga alternativ för att redigera slingor. Det blir "
+"t.ex. omöjligt att ändra typsnitt, teckengrad (lätt, fet, tung, ...) eller "
+"stil (kursiv, normal, kondenserad, ...). På grund av detta rekommenderas det "
+"att man först arbetar med den grova och allmänna formen på en text och sedan "
+"går vidare till de finare detaljerna:"
 
 #: ../../source/flowing-text-into-frame.rst:36 673c28434d7c4dbe9ddaf5dcb683091f
 msgid ""
@@ -129,10 +129,10 @@ msgid ""
 "display the text."
 msgstr ""
 "Om du vill dela SVG-filen på webben, eller exportera den till en PDF-fil som "
-"du vill dela med andra, ska du konvertera alla textobjekt till slingor. "
-"Alla datorer har inte samma typsnitt installerade, och filen kan se "
-"väldigt annorlunda ut för någon, om deras dator använder ett "
-"reservtypsnitt för att visa texten."
+"du vill dela med andra, ska du konvertera alla textobjekt till slingor. Alla "
+"datorer har inte samma typsnitt installerade, och filen kan se väldigt "
+"annorlunda ut för någon, om deras dator använder ett reservtypsnitt för att "
+"visa texten."
 
 #: ../../source/flowing-text-into-frame.rst:49 0e0f964c18dc48f3814852d666ab364f
 msgid "The silhouette of an octopus"
@@ -146,4 +146,4 @@ msgstr "Bläckfiskens form kommer att fungera som en behållare."
 #: ../../source/flowing-text-into-frame.rst:59 1561cb00cad24b8aae37fc69d27e7183
 #: 1ddb987a4d2d4686836e8316a2f8ba99
 msgid "Text flowed into a frame that resembles an octopus."
-msgstr "Texten flödade in i en ram som liknar en bläckfisk."
+msgstr "Texten flödande in i en ram som liknar en bläckfisk."
