--- a/Inkscape/Inkscapes nybörjarguide/moving-and-rotating-letters.po
+++ b/Inkscape/Inkscapes nybörjarguide/moving-and-rotating-letters.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 17:14+0200\n"
+"PO-Revision-Date: 2025-07-29 14:04+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -33,7 +33,7 @@ msgid ""
 "offers numerous options to have fun with texts, adapting them to the "
 "design, while keeping them editable."
 msgstr ""
-"Förutom att deformera en text med :guilabel:`Väljare`-verktyget erbjuder "
+"Förutom att deformera en text med verktyget :guilabel:`Väljare` erbjuder "
 "Inkscape många alternativ för att ha kul med texter och anpassa dem till "
 "designen, samtidigt som de är redigerbara."
 
@@ -48,7 +48,7 @@ msgid ""
 msgstr ""
 "För att använda följande alternativ måste du markera den text, de ord "
 "eller de bokstäver som du vill flytta med textverktyget och sedan öka "
-"eller minska värdet för alternativet i verktygets kontrollfält "
+"eller minska värdet för alternativet i verktygskontrollfältet "
 "(standardvärdet för alla är 0). Förändringen kommer omedelbart att synas "
 "på duken."
 
@@ -120,7 +120,7 @@ msgstr ""
 "Ett av alternativen är att ändra positionen för ett ord eller enstaka "
 "bokstäver i förhållande till baslinjen. Det innebär att det markerade "
 "ordet eller bokstaven flyttas uppåt eller nedåt och inte längre ligger "
-"på samma linje som sina medmänniskor."
+"på samma linje som sina grannar."
 
 #: ../../source/moving-and-rotating-letters.rst:45
 #: a488e45df5d74ebf98c3f5803ac6585a
