--- a/Inkscape/Inkscapes nybörjarguide/node-types.po
+++ b/Inkscape/Inkscapes nybörjarguide/node-types.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 19:14+0200\n"
+"PO-Revision-Date: 2025-07-29 14:01+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -31,7 +31,7 @@ msgstr "|Large Icon for Node Tool| :kbd:`F2` eller :kbd:`N`"
 
 #: ../../source/node-types.rst:66 d146c4e2b46e481f92c10b14199c327e
 msgid "Large Icon for Node Tool"
-msgstr "Stor ikon för Node-verktyg"
+msgstr "Stor ikon för Nod-verktyget"
 
 #: ../../source/node-types.rst:7 ed62ee85383b498baf596da15d884df8
 msgid ""
@@ -45,11 +45,11 @@ msgstr ""
 
 #: ../../source/node-types.rst:9 b3ca8458cfcd41d8a26e6c5eb26c4861
 msgid "|Cusp Node Icon| Cusp nodes"
-msgstr "|Cusp Node Icon| Cusp-noder"
+msgstr "|Cusp Node Icon| Spets-noder"
 
 #: ../../source/node-types.rst:68 d9cd71f65ebe4cd28ca25d2ee6e9ac54
 msgid "Cusp Node Icon"
-msgstr "Cusp Node Ikon"
+msgstr "Ikon för spetsnod"
 
 #: ../../source/node-types.rst:10 56aefff9828d458597ab2e2cc27a894e
 msgid ""
@@ -58,16 +58,16 @@ msgid ""
 "node is diamond-shaped."
 msgstr ""
 "Används för att skapa hörn eller för att fritt kunna ändra slingans "
-"krökning. Handtagen kan flyttas oberoende av varandra. En cusp-nod är "
+"krökning. Handtagen kan flyttas oberoende av varandra. En spets-nod är "
 "diamantformad."
 
 #: ../../source/node-types.rst:14 d10b5066ddf342649f194d3146c346ef
 msgid "|Smooth node icon| Smooth nodes"
-msgstr "|Smooth node icon| Mjuka noder"
+msgstr "|Smooth node icon| Släta noder"
 
 #: ../../source/node-types.rst:70 f14ea6be58a540359eb94413ff5b94f4
 msgid "Smooth node icon"
-msgstr "Smidig nod-ikon"
+msgstr "Ikon för slät nod"
 
 #: ../../source/node-types.rst:15 7a97e150ac4142a283c9d11745a5662e
 msgid ""
@@ -83,7 +83,7 @@ msgstr "|Symmetric node icon| Symmetriska noder"
 
 #: ../../source/node-types.rst:72 d7833c5cf5634a6aa57849ff0138ac61
 msgid "Symmetric node icon"
-msgstr "Symbol för symmetrisk nod"
+msgstr "Ikon för symmetrisk nod"
 
 #: ../../source/node-types.rst:19 daa9868502564df5a55bcc2b9336c91a
 msgid ""
@@ -97,11 +97,11 @@ msgstr ""
 
 #: ../../source/node-types.rst:22 6ab3b8c5c62c4190b20de41469644cd2
 msgid "|Auto-smooth node icon| Auto-smooth nodes"
-msgstr "|Auto-smooth node icon| Auto-smooth noder"
+msgstr "|Auto-smooth node icon| Automatiskt utjämnade noder"
 
 #: ../../source/node-types.rst:74 d70a129c84bb412191dd57bc722083e4
 msgid "Auto-smooth node icon"
-msgstr "Automatisk utjämning av nodens ikon"
+msgstr "Ikon för automatiskt utjämnad nod"
 
 #: ../../source/node-types.rst:23 4ade70ee25734525b804bf04a74f0abe
 msgid ""
@@ -140,21 +140,21 @@ msgid ""
 "Then click on the corresponding icon in the tool controls bar to set the "
 "node type."
 msgstr ""
-"Klicka sedan på motsvarande ikon i verktygsstyrningsfältet för att "
-"ställa in nodtypen."
+"Klicka sedan på motsvarande ikon i verktygskontrollfältet för att ställa "
+"in nodtypen."
 
 #: ../../source/node-types.rst:37 2e911b3596c446a0b633c72bc8c9b271
 msgid ""
 "Beginners often prefer to use cusp nodes, because they are easy to use, "
 "although very often, smooth nodes would be the better choice."
 msgstr ""
-"Nybörjare föredrar ofta att använda cusp-noder, eftersom de är lätta att "
+"Nybörjare föredrar ofta att använda spetsnoder, eftersom de är lätta att "
 "använda, även om släta noder ofta skulle vara det bättre valet."
 
 #: ../../source/node-types.rst:40 ../../source/node-types.rst:44
 #: 2873522ece7948a6890fd71395b0b78c 76f5df5653644c2e9d44b0eba5bc0a93
 msgid "Cusp nodes make sharp corners."
-msgstr "Cusp-noder gör skarpa hörn."
+msgstr "Spetsnoder gör skarpa hörn."
 
 #: ../../source/node-types.rst:46 ../../source/node-types.rst:50
 #: 57338de4308c42278f28ce0154cc2cc9 e171fedf1dec4f6b8768b145b917830b
@@ -169,4 +169,5 @@ msgstr "En symmetrisk nod skapar en symmetrisk kurva."
 #: ../../source/node-types.rst:58 ../../source/node-types.rst:62
 #: 11650b84c05f4d55a3f57b856170c98f 4de41bc8cf5e4f569ec9aac3af642dce
 msgid "Auto-smooth nodes adapt automatically when you move them."
-msgstr "Auto-smooth-noderna anpassas automatiskt när du flyttar dem."
+msgstr ""
+"Automatiskt utjämnade noder anpassas automatiskt när du flyttar dem."
