--- a/Inkscape/Inkscapes nybörjarguide/putting-text-on-path.po
+++ b/Inkscape/Inkscapes nybörjarguide/putting-text-on-path.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 18:44+0200\n"
+"PO-Revision-Date: 2025-07-29 13:56+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -36,8 +36,8 @@ msgstr ""
 "Justeringarna av bokstävernas och ordens positioner är bara en sista "
 "detalj. Ofta är det bra att börja med att layouta texten som helhet i en "
 "ritning. Inkscape erbjuder två alternativ för detta, som är tillgängliga "
-"via :menuselection:`Text --> Put on Path` och :menuselection:`Text --> "
-"Flow into Frame`."
+"via :menuselection:`Text --> Placera på slinga` och :menuselection:`Text --"
+"> Flöda in i ram`."
 
 #: ../../source/putting-text-on-path.rst:10 22a112ef0c2b4756be2e651925599193
 msgid "|image0|"
@@ -61,16 +61,16 @@ msgid ""
 msgstr ""
 "Skapa en slinga som ska fungera som baslinje för orden och bokstäverna i "
 "texten. Slingan kan skapas med hjälp av formverktygen och genom att "
-"kombinera former med booleska operationer, eller genom att rita den "
-"direkt med något av de verktyg som ritar slingor."
+"kombinera former med booleska operationer, eller genom att rita den direkt "
+"med något av de verktyg som ritar slingor."
 
 #: ../../source/putting-text-on-path.rst:18 5a9a563cbe094c9b95602448da36de20
 msgid ""
 "Write the text directly on the canvas, after clicking on it with the "
 "mouse. It's not useful to use flowed text in a frame for this."
 msgstr ""
-"Skriv texten direkt på duken efter att ha klickat på den med musen. Det "
-"är inte användbart att använda flödad text i en ram för detta."
+"Skriv texten direkt på duken efter att ha klickat på den med musen. Det är "
+"inte användbart att använda flödande text i en ram för detta."
 
 #: ../../source/putting-text-on-path.rst:20 c6fc88f412bb40c4b447e394fa6d66ab
 msgid ""
@@ -88,17 +88,17 @@ msgid ""
 "do the work by selecting :menuselection:`Text --> Put on Path` from the "
 "menu."
 msgstr ""
-"Markera slingan och texten med Selector-verktyget. Låt sedan Inkscape "
-"göra jobbet genom att välja :menuselection:`Text --> Put on Path` från "
+"Markera slingan och texten med Väljare-verktyget. Låt sedan Inkscape göra "
+"jobbet genom att välja :menuselection:`Text --> Placera på slinga` från "
 "menyn."
 
 #: ../../source/putting-text-on-path.rst:25 5d347fc3e86c4b539c2f0e6281731473
 msgid ""
 "The result will show up on the canvas immediately. The text can still be "
 "edited at any time: you can change its contents or style whenever you "
-"like. The path will remain editable, too: you can shape its curves, add "
-"or delete nodes, move it, etc. and the text will automatically adjust to "
-"its changed shape."
+"like. The path will remain editable, too: you can shape its curves, add or "
+"delete nodes, move it, etc. and the text will automatically adjust to its "
+"changed shape."
 msgstr ""
 "Resultatet kommer att visas på duken omedelbart. Texten kan fortfarande "
 "redigeras när som helst: du kan ändra dess innehåll eller stil när du "
@@ -142,12 +142,11 @@ msgstr "Skapa en text och en slinga med den metod som du föredrar…"
 
 #: ../../source/putting-text-on-path.rst:46 39d0cf227cc9471b8986b58f6c0b4bd0
 msgid "Putting the text on the path"
-msgstr "Lägga in texten på slingan"
+msgstr "Placera texten på slingan"
 
 #: ../../source/putting-text-on-path.rst:50 b94f6f612c1348c9b5224c7bdda007e1
 msgid ""
-"… and put the text on the path using :menuselection:`Text --> Put on "
-"Path`."
+"… and put the text on the path using :menuselection:`Text --> Put on Path`."
 msgstr ""
-"... och lägg texten på slingan med hjälp av :menuselection:`Text --> Lägg "
-"på slinga`."
+"... och lägg texten på slingan med hjälp av :menuselection:`Text --> "
+"Placera på slinga`."
