--- a/Inkscape/Inkscapes nybörjarguide/boolean-operations.po
+++ b/Inkscape/Inkscapes nybörjarguide/boolean-operations.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 17:51+0200\n"
+"PO-Revision-Date: 2025-07-29 13:42+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -28,8 +28,8 @@ msgstr "Booleska operationer"
 #: ../../source/boolean-operations.rst:5 7fff8aae8ee140d7b3b9c4b421418fcc
 msgid ""
 "The Boolean Operations work on paths, or they try to convert the selected "
-"objects to paths before they compute the result. All these operations need "
-"at least 2 convertible objects or paths, which will be combined following "
+"objects to paths before they compute the result. All these operations need at "
+"least 2 convertible objects or paths, which will be combined following "
 "specific rules."
 msgstr ""
 "De booleska operationerna arbetar på slingor, eller så försöker de konvertera "
@@ -39,11 +39,11 @@ msgstr ""
 
 #: ../../source/boolean-operations.rst:10 13751a4d582344009e6da0a859bd1b2f
 msgid "|Union icon| Union"
-msgstr "|Union icon| Union"
+msgstr "|Union icon| Sammanfogning"
 
 #: ../../source/boolean-operations.rst:80 434e2c3db2c340f3a3f55925207ef7bc
 msgid "Union icon"
-msgstr "Ikon för union"
+msgstr "Ikon för sammanfogning"
 
 #: ../../source/boolean-operations.rst:11 3a466356ef21446cbbf9505c4691e54b
 msgid "Keeps the common outline of all selected paths."
@@ -51,11 +51,11 @@ msgstr "Behåller den gemensamma konturen för alla markerade slingor."
 
 #: ../../source/boolean-operations.rst:14 e1f21351b5da44dabcd1bd6da2d1dc82
 msgid "|Difference icon| Difference"
-msgstr "|Difference icon| Skillnad"
+msgstr "|Difference icon| Differens"
 
 #: ../../source/boolean-operations.rst:82 79414ecf6ff2492db2db75b3797e1d88
 msgid "Difference icon"
-msgstr "Skillnadsikon"
+msgstr "Ikon för differens"
 
 #: ../../source/boolean-operations.rst:15 bdfa191bb9d7469098599ab28eb72efe
 msgid "Subtracts one path from another one."
@@ -63,11 +63,11 @@ msgstr "Subtraherar en slinga från en annan."
 
 #: ../../source/boolean-operations.rst:17 18792e39f1fc4cf1956ec335d2935f5c
 msgid "|Intersection icon| Intersection"
-msgstr "|Intersection icon| Korsning"
+msgstr "|Intersection icon| Snitt"
 
 #: ../../source/boolean-operations.rst:84 5f7c47396e6a40979cbfbea6537f41a8
 msgid "Intersection icon"
-msgstr "Ikon för korsning"
+msgstr "Ikon för snitt"
 
 #: ../../source/boolean-operations.rst:18 1cbd8f4e80f44418bdda0308d396476b
 msgid "Only keeps those parts that are covered by all selected paths."
@@ -75,11 +75,11 @@ msgstr "Behåller endast de delar som täcks av alla valda slingor."
 
 #: ../../source/boolean-operations.rst:21 38132cc778394f0a80e22237c4c8785a
 msgid "|Exclusion icon| Exclusion"
-msgstr "|Exclusion icon| Exkludering"
+msgstr "|Exclusion icon| Exklusion"
 
 #: ../../source/boolean-operations.rst:86 091b3ac430e942a38ad03d2aa47fb4af
 msgid "Exclusion icon"
-msgstr "Ikon för uteslutning"
+msgstr "Ikon för exklusion"
 
 #: ../../source/boolean-operations.rst:22 03d963b1832e4bab87b3b85e68316733
 msgid ""
@@ -95,7 +95,7 @@ msgstr "|Division icon| Division"
 
 #: ../../source/boolean-operations.rst:88 016d6d549ea146ada54186d567a03da9
 msgid "Division icon"
-msgstr "Divisionsikon"
+msgstr "Ikon för division"
 
 #: ../../source/boolean-operations.rst:26 b210a44c9005425ba609a57f6f1f1675
 msgid "The path below is cut into pieces by the path above."
@@ -107,14 +107,13 @@ msgstr "|Cut path icon| Klipp slinga"
 
 #: ../../source/boolean-operations.rst:90 5490a75dfcae4880b1a5e28d2a8662a6
 msgid "Cut path icon"
-msgstr "Ikon för klippväg"
+msgstr "Ikon för klipp slinga"
 
 #: ../../source/boolean-operations.rst:29 2f282e9238b34ad9b58a434d464dae2a
 msgid ""
 "Creates as many paths as there are path intersections between the two paths."
 msgstr ""
-"Skapar lika många slingor som det finns slingakorsningar mellan de två "
-"slingorna."
+"Skapar lika många slingor som det finns slingsnitt mellan de två slingorna."
 
 #: ../../source/boolean-operations.rst:31 43fc64d8ab1f4bfd83373d81782778f8
 msgid "|Combine icon| Combine"
@@ -122,7 +121,7 @@ msgstr "|Combine icon| Kombinera"
 
 #: ../../source/boolean-operations.rst:92 129d95c5e4eb46ad992332ea2ca1a238
 msgid "Combine icon"
-msgstr "Kombinera ikon"
+msgstr "Ikon för kombinera"
 
 #: ../../source/boolean-operations.rst:32 1d9874b29df14e6181b669611242f01b
 msgid "Keeps all parts, and combines them into a single object."
@@ -130,11 +129,11 @@ msgstr "Behåller alla delar och kombinerar dem till ett enda objekt."
 
 #: ../../source/boolean-operations.rst:34 7e3d7bbda29e41dd93e0da512f9469b0
 msgid "|Break apart icon| Break Apart"
-msgstr "|Break apart icon| Bryta isär"
+msgstr "|Break apart icon| Ta isär"
 
 #: ../../source/boolean-operations.rst:94 52b7a38e76b74facbb790ec1ca88ba1e
 msgid "Break apart icon"
-msgstr "Ikon för sönderdelning"
+msgstr "Ikon för ta isär"
 
 #: ../../source/boolean-operations.rst:35 e7acbc0c32764fef839a51a967eded45
 msgid ""
@@ -148,12 +147,12 @@ msgstr ""
 msgid ""
 "To use these operations, select the two (or more) objects, and then select "
 "the option of your choice in the :guilabel:`Path` menu. The result will "
-"immediately appear on the canvas - if it doesn't, read the error message "
-"that will appear in the status bar, at the bottom of the Inkscape window, "
-"to find out about the reason for the failure."
+"immediately appear on the canvas - if it doesn't, read the error message that "
+"will appear in the status bar, at the bottom of the Inkscape window, to find "
+"out about the reason for the failure."
 msgstr ""
 "För att använda dessa operationer, markera de två (eller fler) objekten och "
-"välj sedan det alternativ du vill ha i menyn :guilabel:`Path`. Resultatet "
+"välj sedan det alternativ du vill ha i menyn :guilabel:`Slinga`. Resultatet "
 "kommer omedelbart att visas på duken - om det inte gör det, läs "
 "felmeddelandet som visas i statusfältet längst ner i Inkscape-fönstret för "
 "att ta reda på orsaken till misslyckandet."
@@ -161,50 +160,47 @@ msgstr ""
 #: ../../source/boolean-operations.rst:44 dec721e7ebaf4c73a07ae3cee32abfd2
 msgid ""
 "The :doc:`stacking order <stacking-order>` of the object matters, so check "
-"that the bottom object is the one you want to apply the operation to. To "
-"know how each operation will apply, look at the icons: the circle is always "
-"on top of the square."
+"that the bottom object is the one you want to apply the operation to. To know "
+"how each operation will apply, look at the icons: the circle is always on top "
+"of the square."
 msgstr ""
 "Objektets :doc:`staplingsordning <stacking-order>` spelar roll, så "
-"kontrollera att det understa objektet är det som du vill använda "
-"operationen på. För att veta hur varje operation kommer att tillämpas, "
-"titta på ikonerna: cirkeln är alltid ovanpå kvadraten."
+"kontrollera att det understa objektet är det som du vill använda operationen "
+"på. För att veta hur varje operation kommer att tillämpas, titta på ikonerna: "
+"cirkeln är alltid ovanpå kvadraten."
 
 #: ../../source/boolean-operations.rst:50 229c7d5f208749e6a4169404e54526a6
 msgid "Unioning a triangle and a square results in a house"
-msgstr "När man förenar en triangel och en kvadrat får man ett hus"
+msgstr "När man sammanfogar en triangel och en kvadrat resulterar i ett hus"
 
 #: ../../source/boolean-operations.rst:54 f7a754d60f3d475f814096f0291e1036
 msgid "Unioning a triangle and a square gives a house."
-msgstr "Om man förenar en triangel och en kvadrat får man ett hus."
+msgstr "Om man sammanfogar en triangel och en kvadrat får man ett hus."
 
 #: ../../source/boolean-operations.rst:56 38ee04de48df4f199352c5fce4311f07
 msgid "The rectangle will become the door opening after Difference"
-msgstr "Rektangeln kommer att bli dörröppningen efter Difference"
+msgstr "Rektangeln kommer att bli dörröppningen efter differens"
 
 #: ../../source/boolean-operations.rst:60 b28e8655695b4685b5a366a75f421921
 msgid ""
 "Difference between a rectangle and a house creates an opening for the door."
-msgstr ""
-"Skillnaden mellan en rektangel och ett hus skapar en öppning för dörren."
+msgstr "Differens mellan en rektangel och ett hus skapar en öppning för dörren."
 
 #: ../../source/boolean-operations.rst:62 b6c9ef26014d4dcba538c0f55864e410
 msgid "Two overlapping ellipses and the results of Intersection and Exclusion"
-msgstr ""
-"Två överlappande ellipser och resultatet av Intersection och Exclusion"
+msgstr "Två överlappande ellipser och resultatet av Snitt och Exklusion"
 
 #: ../../source/boolean-operations.rst:66 1596e772a71f4b78a165ae4728f3fd6a
 msgid ""
-"Two overlapping ellipses. On the left: Intersection between the two "
-"ellipses. On the right: Exclusion between the two ellipses."
+"Two overlapping ellipses. On the left: Intersection between the two ellipses. "
+"On the right: Exclusion between the two ellipses."
 msgstr ""
-"Två ellipser som överlappar varandra. Till vänster i bild: Skärningspunkten "
-"mellan de två ellipserna. På den högra sidan: Uteslutning mellan de två "
-"ellipserna."
+"Två ellipser som överlappar varandra. Till vänster i bild: Snitt mellan de "
+"två ellipserna. På den högra sidan: Exklusion mellan de två ellipserna."
 
 #: ../../source/boolean-operations.rst:68 3a5492b5716446f886a8572e11dff3ec
 msgid "Ellipse with a path on top. Ellipse divided by the path."
-msgstr "Ellips med en slinga ovanpå. Ellips delad av vägen."
+msgstr "Ellips med en slinga ovanpå. Ellips delad av slingan."
 
 #: ../../source/boolean-operations.rst:72 1262c7720648499aa0aa148776f1a81f
 msgid ""
@@ -220,14 +216,14 @@ msgid ""
 "subpaths). Each subpath has become a single path after Break Apart."
 msgstr ""
 "De två delarna av ellipsen har kombinerats till en enda slinga (med "
-"underslingor). Varje delväg har blivit en enda väg efter Break Apart."
+"underslingor). Varje delslinga har blivit en enda väg efter Ta isär."
 
 #: ../../source/boolean-operations.rst:78 818a4aa0dd9b4f1e82f2a4d92a02e331
 msgid ""
 "On the left: Move apart and combine (to form a single path composed of two "
-"subpaths). On the right: :guilabel:`Break Apart` separates all subpaths "
-"into independent objects."
+"subpaths). On the right: :guilabel:`Break Apart` separates all subpaths into "
+"independent objects."
 msgstr ""
 "På vänster sida: Flytta isär och kombinera (för att bilda en enda slinga som "
-"består av två delslingor). Till höger: :guilabel:`Break Apart` separerar alla "
+"består av två delslingor). Till höger: :guilabel:`Ta isär` separerar alla "
 "delslingor till oberoende objekt."
