--- a/Inkscape/Inkscapes nybörjarguide/creating-a-mesh-gradient.po
+++ b/Inkscape/Inkscapes nybörjarguide/creating-a-mesh-gradient.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 19:00+0200\n"
+"PO-Revision-Date: 2025-09-01 14:24+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../../source/creating-a-mesh-gradient.rst:3 75ba70e810234b9097a3f108115bab84
 msgid "Creating a Mesh Gradient"
-msgstr "Skapa en Mesh Gradient"
+msgstr "Skapa en nätgradient"
 
 #: ../../source/creating-a-mesh-gradient.rst:5 5fe1456fd9eb430da46bfcfdb40b4a6c
 msgid "|Large Mesh Gradient icon|"
@@ -47,8 +47,7 @@ msgstr ""
 #: ../../source/creating-a-mesh-gradient.rst:11
 #: fabb1e0fd879437caa2f6017b6d551ea
 msgid "To apply a mesh gradient to an object, select the object."
-msgstr ""
-"Om du vill använda en mesh-gradient på ett objekt markerar du objektet."
+msgstr "Om du vill använda en nätgradient på ett objekt markerar du objektet."
 
 #: ../../source/creating-a-mesh-gradient.rst:13
 #: ca6e0fa6b40246358585b77ac83c5d31
@@ -66,7 +65,7 @@ msgid ""
 "Activate the Mesh Gradient tool in the tool bar. Use it to click and drag on "
 "the object."
 msgstr ""
-"Aktivera verktyget Mesh Gradient i verktygsfältet. Använd det för att klicka "
+"Aktivera verktyget Nätgradient i verktygsfältet. Använd det för att klicka "
 "och dra på objektet."
 
 #: ../../source/creating-a-mesh-gradient.rst:19
@@ -80,13 +79,13 @@ msgid ""
 "Open the :guilabel:`Fill and Stroke` dialog. There, select the **Mesh "
 "Gradient** mode |Mesh Gradient Paint icon|."
 msgstr ""
-"Öppna dialogrutan :guilabel:`Fill and Stroke`. Där väljer du läget **Mesh "
-"Gradient** |Mesh Gradient Paint icon|."
+"Öppna dialogrutan :guilabel:`Fyllning och streck`. Där väljer du läget "
+"**Nätgradient** |Mesh Gradient Paint icon|."
 
 #: ../../source/creating-a-mesh-gradient.rst:78
 #: ab7a446af68e42b4a3c587d1cee85d4d
 msgid "Mesh Gradient Paint icon"
-msgstr "Mesh Gradient Paint-ikon"
+msgstr "Nätgradient-ikon"
 
 #: ../../source/creating-a-mesh-gradient.rst:23
 #: 4292ece21c9f49e4ba6f16c5678859da
@@ -94,7 +93,7 @@ msgid ""
 "Now, the mesh gradient will be displayed directly on the object. It has some "
 "different kinds of nodes:"
 msgstr ""
-"Nu kommer mesh-gradienten att visas direkt på objektet. Den har några olika "
+"Nu kommer nätgradienten att visas direkt på objektet. Den har några olika "
 "typer av noder:"
 
 #: ../../source/creating-a-mesh-gradient.rst:26
@@ -113,7 +112,7 @@ msgid ""
 "You will only be able to see and modify these nodes when you use the Mesh "
 "Gradient tool."
 msgstr ""
-"Du kan bara se och ändra dessa noder när du använder verktyget Mesh Gradient."
+"Du kan bara se och ändra dessa noder när du använder verktyget Nätgradient."
 
 #: ../../source/creating-a-mesh-gradient.rst:33
 #: 0e2f5fb669e04ac99e276cf02aad35ff
@@ -141,7 +140,7 @@ msgstr ""
 #: ../../source/creating-a-mesh-gradient.rst:41
 #: c6f0f5eaf3da4773bd86d0c5b5dac67f
 msgid "To apply a color:"
-msgstr "För att applicera en färg:"
+msgstr "För att tillämpa en färg:"
 
 #: ../../source/creating-a-mesh-gradient.rst:43
 #: b4646058f7b6487484b2a8c4d0b31a07
@@ -160,9 +159,9 @@ msgid ""
 "the :guilabel:`Fill and Stroke` dialog to more quickly apply colors that you "
 "already use in your drawing."
 msgstr ""
-"Du kan använda droppikonen |Color Picker icon| längst ned i "
-"dialogen :guilabel:`Fill and Stroke` för att snabbare använda färger som du "
-"redan använder i din ritning."
+"Du kan använda pipettikonen |Color Picker icon| längst ned i "
+"dialogen :guilabel:`Fyllning och streck` för att snabbare använda färger som "
+"du redan använder i din ritning."
 
 #: ../../source/creating-a-mesh-gradient.rst:80
 #: a2b05f334b464791b0a09f7f08e72c29
@@ -177,16 +176,16 @@ msgid ""
 "mygradient1234). Select the gradient in the :guilabel:`Mesh Fill` list in "
 "the :guilabel:`Fill and Stroke` dialog to reuse it on a different object."
 msgstr ""
-"Precis som vanliga gradienter kan **mesh gradienter** delas mellan objekt, "
-"när båda objekten använder en gradient med samma namn (t.ex. "
-"mygradient1234). Välj gradienten i listan :guilabel:`Mesh Fill` i "
-"dialogrutan :guilabel:`Fill and Stroke` för att återanvända den på ett annat "
-"objekt."
+"Precis som vanliga gradienter kan **nätgradienter** delas mellan objekt, när "
+"båda objekten använder en gradient med samma namn (t.ex. mingradient1234). "
+"Välj gradienten i listan :guilabel:`Nätfyllning` i "
+"dialogrutan :guilabel:`Fyllning och streck` för att återanvända den på ett "
+"annat objekt."
 
 #: ../../source/creating-a-mesh-gradient.rst:54
 #: eb02ce70d5a542a39e43ee8345155a87
 msgid "Cloud with mesh gradient"
-msgstr "Moln med mesh-gradient"
+msgstr "Moln med nätgradient"
 
 #: ../../source/creating-a-mesh-gradient.rst:58
 #: 2072f469cf944b19b9e435b2694bd3fd
@@ -195,26 +194,26 @@ msgid ""
 "one of the grey diamond-shaped nodes. The shape of the mesh has been "
 "modified to better fit the shape of the cloud."
 msgstr ""
-"Detta moln består av 10 olika färger. Varje färg har applicerats på en av de "
+"Detta moln består av 10 olika färger. Varje färg har tillämpats på en av de "
 "grå diamantformade noderna. Maskans form har ändrats för att bättre passa "
 "molnets form."
 
 #: ../../source/creating-a-mesh-gradient.rst:62
 #: 837e7e61df7f41a380c388593348fd95
 msgid "Landscape with mesh gradients"
-msgstr "Landskap med mesh-gradienter"
+msgstr "Landskap med nätgradienter"
 
 #: ../../source/creating-a-mesh-gradient.rst:66
 #: 098e15476e78471b8a98f1ece688c58c
 msgid "A landscape with mesh gradients"
-msgstr "Ett landskap med mesh-gradienter"
+msgstr "Ett landskap med nätgradienter"
 
 #: ../../source/creating-a-mesh-gradient.rst:68
 #: f9564e65c5f2448dad99ed867cdacbc2
 msgid "Same landscape without mesh gradients"
-msgstr "Samma landskap utan mesh-gradienter"
+msgstr "Samma landskap utan nätgradienter"
 
 #: ../../source/creating-a-mesh-gradient.rst:72
 #: 83a3b57656f5405c960322d0dc78a368
 msgid "The same landscape without mesh gradients"
-msgstr "Samma landskap utan mesh-gradienter"
+msgstr "Samma landskap utan nätgradienter"
