--- a/Inkscape/Inkscapes nybörjarguide/creating-custom-fonts.po
+++ b/Inkscape/Inkscapes nybörjarguide/creating-custom-fonts.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 17:13+0200\n"
+"PO-Revision-Date: 2025-09-01 14:14+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -28,8 +28,7 @@ msgstr "Skapa anpassade typsnitt"
 #: ../../source/creating-custom-fonts.rst:5 11d9215be215432aa3afceac2791b34a
 msgid ""
 "Fonts can be saved in different file formats: OTF, TTF and SVG (and some more)."
-msgstr ""
-"Typsnitt kan sparas i olika filformat: OTF, TTF och SVG (och några till)."
+msgstr "Typsnitt kan sparas i olika filformat: OTF, TTF och SVG (och några till)."
 
 #: ../../source/creating-custom-fonts.rst:7 612227aef9c546cfabc701a20fcbc581
 msgid "With Inkscape, you can create :term:`SVG fonts <SVG font>`."
@@ -37,13 +36,13 @@ msgstr "Med Inkscape kan du skapa :term:`SVG-typsnitt <SVG font>`."
 
 #: ../../source/creating-custom-fonts.rst:9 3b99b0feb04d4d80bfb277eec055d3a4
 msgid ""
-"These fonts are embedded in the resulting SVG file. For being able to use them "
-"in a text editor or graphics program, however, they must later be converted to "
-"another font file format."
+"These fonts are embedded in the resulting SVG file. For being able to use them in a "
+"text editor or graphics program, however, they must later be converted to another "
+"font file format."
 msgstr ""
-"Dessa typsnitt är inbäddade i den resulterande SVG-filen. För att kunna "
-"använda dem i en textredigerare eller ett grafikprogram måste de dock senare "
-"konverteras till ett annat format för typsnittsfiler."
+"Dessa typsnitt är inbäddade i den resulterande SVG-filen. För att kunna använda dem "
+"i en textredigerare eller ett grafikprogram måste de dock senare konverteras till "
+"ett annat format för typsnittsfiler."
 
 #: ../../source/creating-custom-fonts.rst:11 3a394a6c8e2d45ad90423b1d0692228a
 msgid ""
@@ -52,11 +51,11 @@ msgid ""
 "standard. However, they are useful for font-making in Inkscape, and other font-"
 "making programs can still convert them to other font file formats."
 msgstr ""
-"Du kommer inte att kunna använda SVG-filen direkt som ett typsnitt på en "
-"webbsida, till exempel. Detta beror på att SVG-typsnitt har tagits bort från "
-"den officiella SVG-standarden. De är dock användbara för att skapa typsnitt "
-"i Inkscape, och andra program för att skapa typsnitt kan fortfarande "
-"konvertera dem till andra typsnittsfilformat."
+"Du kommer inte att kunna använda SVG-filen direkt som ett typsnitt på en webbsida, "
+"till exempel. Detta beror på att SVG-typsnitt har tagits bort från den officiella "
+"SVG-standarden. De är dock användbara för att skapa typsnitt i Inkscape, och andra "
+"program för att skapa typsnitt kan fortfarande konvertera dem till andra "
+"typsnittsfilformat."
 
 #: ../../source/creating-custom-fonts.rst:15 85b2e0779dc74068828b04e8933bce1b
 msgid ""
@@ -72,34 +71,33 @@ msgstr "Så här skapar du ett eget SVG-typsnitt:"
 
 #: ../../source/creating-custom-fonts.rst:20 69740035dca4434b924a0ebecdca7bf8
 msgid ""
-"Open the typography template with :menuselection:`File --> New from Template --"
-"> Typography Canvas`."
-msgstr ""
-"Öppna typografimallen med :menuselection:`File --> New from Template --> "
+"Open the typography template with :menuselection:`File --> New from Template --> "
 "Typography Canvas`."
+msgstr ""
+"Öppna typografimallen med :menuselection:`Arkiv --> Nytt från mall --> "
+"Typografiduk`."
 
 #: ../../source/creating-custom-fonts.rst:21 264aec973634487aa7dc5b08f5a0f7bf
 msgid ""
 "Open the :guilabel:`Font Editor` dialog from :menuselection:`Text --> SVG Font "
 "Editor`."
 msgstr ""
-"Öppna dialogrutan :guilabel:`Font Editor` från :menuselection:`Text --> SVG "
-"Font Editor`."
+"Öppna dialogrutan :guilabel:`Typsnittsredigerare` från :menuselection:`Text --> SVG-"
+"typsnittsredigerare`."
 
 #: ../../source/creating-custom-fonts.rst:22 32467e4e54c3473bb9a9fdfcb7ee9a3f
 msgid ""
-"In the column labelled :guilabel:`Font`, click on :guilabel:`New` to create a "
-"font. You can double-click on the generic name, in this case :guilabel:`font "
-"1`, of the font to change it."
+"In the column labelled :guilabel:`Font`, click on :guilabel:`New` to create a font. "
+"You can double-click on the generic name, in this case :guilabel:`font 1`, of the "
+"font to change it."
 msgstr ""
-"I kolumnen :guilabel:`Font` klickar du på :guilabel:`New` för att skapa ett "
+"I kolumnen :guilabel:`Typsnitt` klickar du på :guilabel:`Nytt` för att skapa ett "
 "typsnitt. Du kan dubbelklicka på det generiska namnet, i det här "
 "fallet :guilabel:`font 1`, för typsnittet för att ändra det."
 
 #: ../../source/creating-custom-fonts.rst:23 a9596c9b16574b57b1c50a3f9faae3ba
 msgid "Open the :guilabel:`Layers` dialog from :menuselection:`Layer --> Layers`."
-msgstr ""
-"Öppna dialogrutan :guilabel:`Layers` från :menuselection:`Layer --> Layers`."
+msgstr "Öppna dialogrutan :guilabel:`Lager` från :menuselection:`Lager --> Lager`."
 
 #: ../../source/creating-custom-fonts.rst:26 b72c6203de684bdf9d0be775d01ca8e6
 msgid "You can also use the Layers dialog button in the commands bar."
@@ -111,48 +109,47 @@ msgstr "Upprepa följande för varje glyf som du vill lägga till i ditt typsnit
 
 #: ../../source/creating-custom-fonts.rst:30 8d4f51cc11724bf7b084cb0362cc032f
 msgid ""
-"In the :guilabel:`Layers` dialog, add a new layer by clicking on the '+' icon. "
-"Name it after your letter. Select the layer in the dialog."
+"In the :guilabel:`Layers` dialog, add a new layer by clicking on the '+' icon. Name "
+"it after your letter. Select the layer in the dialog."
 msgstr ""
-"I dialogrutan :guilabel:`Layers` lägger du till ett nytt lager genom att klicka "
-"på ikonen \"+\". Namnge det efter din bokstav. Välj skiktet i dialogrutan."
+"I dialogrutan :guilabel:`Lager` lägger du till ett nytt lager genom att klicka på "
+"ikonen \"+\". Namnge det efter din bokstav. Välj lagret i dialogrutan."
 
 #: ../../source/creating-custom-fonts.rst:32 f5222ec647f9453ab7678744024c3722
 msgid ""
 "Now, in the :guilabel:`Font Editor`, in the tab :guilabel:`Glyphs`, click "
-"on :guilabel:`Add Glyph`. Double-click on the :guilabel:`Glyph name` field to "
-"name your glyph, e.g. call it 'Capital A' or 'Space'. In "
-"the :guilabel:`Matching String` field, enter the letter that it corresponds to."
+"on :guilabel:`Add Glyph`. Double-click on the :guilabel:`Glyph name` field to name "
+"your glyph, e.g. call it 'Capital A' or 'Space'. In the :guilabel:`Matching String` "
+"field, enter the letter that it corresponds to."
 msgstr ""
-"Nu, i :guilabel:`Font Editor`, på fliken :guilabel:`Glyphs`, klicka "
-"på :guilabel:`Add Glyph`. Dubbelklicka på fältet :guilabel:`Glyph name` för att "
+"Nu, i :guilabel:`Typsnittsredigerare`, på fliken :guilabel:`Glyfer`, klicka "
+"på :guilabel:`Lägg till glyf`. Dubbelklicka på fältet :guilabel:`Glyfnamn` för att "
 "namnge glyfen, t.ex. kalla den \"Capital A\" eller \"Space\". I "
-"fältet :guilabel:`Matching String` skriver du in den bokstav som glyfen "
-"motsvarar."
+"fältet :guilabel:`Matchande sträng` skriver du in den bokstav som glyfen motsvarar."
 
 #: ../../source/creating-custom-fonts.rst:36 6901212ba4ed4c9e8e7ec9e84b3ad769
 msgid ""
-"Draw the path for your glyph on the canvas. It must be a closed, single path, "
-"which may consist of multiple subpaths."
+"Draw the path for your glyph on the canvas. It must be a closed, single path, which "
+"may consist of multiple subpaths."
 msgstr ""
-"Rita slingan för din glyf på målarduken. Det måste vara en sluten, enkel slinga som "
-"kan bestå av flera delslingor."
+"Rita slingan för din glyf på duken. Det måste vara en sluten, enkel slinga som kan "
+"bestå av flera delslingor."
 
 #: ../../source/creating-custom-fonts.rst:38 09ba0a07996a41aa9100e92d8214baa1
 msgid ""
-"When you're happy with your glyph, select it, and also select the corresponding "
-"row in the dialog, then click on :guilabel:`Get curves from selection`."
+"When you're happy with your glyph, select it, and also select the corresponding row "
+"in the dialog, then click on :guilabel:`Get curves from selection`."
 msgstr ""
-"När du är nöjd med din glyf markerar du den och även motsvarande rad i "
-"dialogrutan och klickar sedan på :guilabel:`Get curves from selection`."
+"När du är nöjd med din glyf markerar du den och även motsvarande rad i dialogrutan "
+"och klickar sedan på :guilabel:`Hämta kurvor från markering`."
 
 #: ../../source/creating-custom-fonts.rst:43 e2667a1d1896403e811694a36075b4c3
 msgid ""
 "You can always test your font by typing a text into the field at the bottom of "
 "the :guilabel:`SVG Font Editor` dialog and looking at the preview above it."
 msgstr ""
-"Du kan alltid testa ditt typsnitt genom att skriva in en text i fältet längst "
-"ned i dialogrutan :guilabel:`SVG Font Editor` och titta på förhandsgranskningen "
+"Du kan alltid testa ditt typsnitt genom att skriva in en text i fältet längst ned i "
+"dialogrutan :guilabel:`SVG-typsnittsredigerare` och titta på förhandsgranskningen "
 "ovanför."
 
 #: ../../source/creating-custom-fonts.rst:46 88023ec972de4c1087ad4dc29a9ec9e7
@@ -161,9 +158,9 @@ msgid ""
 "layers with the glyphs that you have already finished. To protect the completed "
 "glyph layers from accidental changes, use the 'lock' icons."
 msgstr ""
-"Du kan använda de små \"ögon\"-ikonerna i dialogrutan :guilabel:`Layers` för "
-"att dölja lagren med de glyfer som du redan har färdigställt. För att skydda de "
-"färdiga glyflagren från oavsiktliga ändringar använder du \"låsikonerna\"."
+"Du kan använda de små \"ögon\"-ikonerna i dialogrutan :guilabel:`Lager` för att "
+"dölja lagren med de glyfer som du redan har färdigställt. För att skydda de färdiga "
+"glyflagren från oavsiktliga ändringar använder du \"låsikonerna\"."
 
 #: ../../source/creating-custom-fonts.rst:48 1c695c18372b4bcaaf0f7616a6fef1e0
 msgid ""
@@ -175,36 +172,36 @@ msgstr ""
 
 #: ../../source/creating-custom-fonts.rst:50 d804c90c0fdf4b0ca2d314e038c6394f
 msgid ""
-"Although this functionality is meant for typographers, amateurs, too, can "
-"quickly get a working result and test their work as they continue."
+"Although this functionality is meant for typographers, amateurs, too, can quickly "
+"get a working result and test their work as they continue."
 msgstr ""
-"Även om den här funktionen är avsedd för typografer kan även amatörer snabbt få "
-"ett fungerande resultat och testa sitt arbete under arbetets gång."
+"Även om den här funktionen är avsedd för typografer kan även amatörer snabbt få ett "
+"fungerande resultat och testa sitt arbete under arbetets gång."
 
 #: ../../source/creating-custom-fonts.rst:53 a98dd3fc489d412e8401438ed0ba46f2
 msgid ""
 "When your font is finished, you can use a font-making software like `FontForge "
-"<https://fontforge.github.io/>`_ where you import your SVG font and can export "
-"it into other different formats to be able to use it with other software, like "
+"<https://fontforge.github.io/>`_ where you import your SVG font and can export it "
+"into other different formats to be able to use it with other software, like "
 "Microsoft Word, LibreOffice, in any other program that supports the choice of "
 "fonts, or in a HTML file using CSS."
 msgstr ""
-"När ditt typsnitt är klart kan du använda ett program för att skapa typsnitt "
-"som `FontForge <https://fontforge.github.io/>`_ där du importerar ditt SVG-"
-"typsnitt och kan exportera det till andra olika format för att kunna använda "
-"det med annan programvara, som Microsoft Word, LibreOffice, i något annat "
-"program som stöder valet av typsnitt, eller i en HTML-fil med CSS."
+"När ditt typsnitt är klart kan du använda ett program för att skapa typsnitt som "
+"`FontForge <https://fontforge.github.io/>`_ där du importerar ditt SVG-typsnitt och "
+"kan exportera det till andra olika format för att kunna använda det med annan "
+"programvara, som Microsoft Word, LibreOffice, i något annat program som stöder "
+"valet av typsnitt, eller i en HTML-fil med CSS."
 
 #: ../../source/creating-custom-fonts.rst:57 54df253a278047a580130eaa2be587ff
 msgid "Typography canvas"
-msgstr "Typografi på duk"
+msgstr "Typografiduk"
 
 #: ../../source/creating-custom-fonts.rst:61 f63c0da38e7a4848b499a376b570ad35
 msgid ""
-"The typography template has just the right size for a single letter. It comes "
-"with 5 useful guides for making your font. On the right side, the (lowercase) "
-"letter 'a' has already been added to the SVG font."
+"The typography template has just the right size for a single letter. It comes with "
+"5 useful guides for making your font. On the right side, the (lowercase) letter 'a' "
+"has already been added to the SVG font."
 msgstr ""
-"Typografimallen har precis rätt storlek för en enda bokstav. Den levereras med "
-"5 användbara guider för att skapa ditt typsnitt. På höger sida har bokstaven "
-"\"a\" (gemener) redan lagts till i SVG-typsnittet."
+"Typografimallen har precis rätt storlek för en enda bokstav. Den levereras med 5 "
+"användbara stödlinjer för att skapa ditt typsnitt. På höger sida har bokstaven "
+"\"a\" (gemen) redan lagts till i SVG-typsnittet."
