--- a/Inkscape/Inkscapes nybörjarguide/styling-text.po
+++ b/Inkscape/Inkscapes nybörjarguide/styling-text.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 18:27+0200\n"
+"PO-Revision-Date: 2025-09-01 14:07+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -35,7 +35,7 @@ msgstr ""
 
 #: ../../source/styling-text.rst:59 bee2cc10270f44c8aba38762a0a9bda2
 msgid "Text and Font"
-msgstr "Typsnitt för text"
+msgstr "Text och typsnitt"
 
 #: ../../source/styling-text.rst:7 45c3d943bb824ff88688298aadac6316
 msgid ""
@@ -43,8 +43,8 @@ msgid ""
 "style. Most of the options that are available in that dialog can also be "
 "found in the horizontal tool controls bar at the top of the canvas:"
 msgstr ""
-"Dialogrutan :guilabel:`Text and Font` är idealisk för att ändra en texts "
-"stil. De flesta av alternativen i den dialogen finns också i det "
+"Dialogrutan :guilabel:`Text och typsnitt` är idealisk för att ändra en "
+"texts stil. De flesta av alternativen i den dialogen finns också i det "
 "horisontella verktygsstyrningsfältet högst upp på duken:"
 
 #: ../../source/styling-text.rst:11 ebecb38edc5e41fe9f45eecf02636da6
@@ -103,8 +103,8 @@ msgstr ""
 "I dialogrutan ser du en liten förhandsvisning av resultatet av dina "
 "inställningar och en flik märkt :guilabel:`Text` som kan innehålla hela "
 "texten utan att visa någon styling. När du har justerat alla parametrar "
-"efter eget tycke kan du klicka på :guilabel:`Apply` för att få resultatet "
-"att visas på duken."
+"efter eget tycke kan du klicka på :guilabel:`Tillämpa` för att få "
+"resultatet att visas på duken."
 
 #: ../../source/styling-text.rst:30 2156e3ca31534bbc931425917ebfb83c
 msgid ""
@@ -113,17 +113,17 @@ msgid ""
 "while you are working on a drawing, you need to close all Inkscape "
 "windows and restart the program to be able to select the new font."
 msgstr ""
-"Inkscape levereras inte med några typsnitt. Du kan välja bland dem som "
-"du har installerat på ditt system. Om du installerar ett nytt typsnitt "
-"medan du arbetar med en teckning måste du stänga alla Inkscape-fönster "
-"och starta om programmet för att kunna välja det nya typsnittet."
+"Inkscape levereras inte med några typsnitt. Du kan välja bland dem som du "
+"har installerat på ditt system. Om du installerar ett nytt typsnitt medan "
+"du arbetar med en teckning måste du stänga alla Inkscape-fönster och "
+"starta om programmet för att kunna välja det nya typsnittet."
 
 #: ../../source/styling-text.rst:35 a0951df136d84b18829817c00055f4bb
 msgid ""
 "The tab :guilabel:`Variants` allows you to activate specific features of "
 "certain fonts, like :term:`ligatures <Ligature>`."
 msgstr ""
-"På fliken :guilabel:`Variants` kan du aktivera specifika egenskaper hos "
+"På fliken :guilabel:`Varianter` kan du aktivera specifika egenskaper hos "
 "vissa typsnitt, som :term:`ligaturer <Ligature>`."
 
 #: ../../source/styling-text.rst:38 12a1a2cd730648c8b9e790c0e36606c6
@@ -150,7 +150,7 @@ msgstr "Textverktygets alternativ"
 #: ../../source/styling-text.rst:47 ../../source/styling-text.rst:51
 #: 15ac1faeaa4f47c883d3ff1604e457d0 6e9f8fc610ac48188b7c20e0b8f048c1
 msgid "Font tab of the Text and Font dialog"
-msgstr "Fliken Font i dialogrutan Text och typsnitt"
+msgstr "Fliken Typsnitt i dialogrutan Text och typsnitt"
 
 #: ../../source/styling-text.rst:53 ../../source/styling-text.rst:57
 #: 81f496dd78ec4eda9bd3a1fcb745074d d1657e1cde4c4e2a8b1026c27feedef3
